--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@
 
 
 .page-body {
+  position: relative;
   min-width: 1200px;
   height: 100%;
   font-family: "Open Sans", "Arial", sans-serif;
@@ -101,8 +102,8 @@
   font-style: normal;
   color: var(--basic-black);
   text-align: left;
-  margin: 0;
   padding: 0;
+  outline: 3px solid rgba(0, 255, 255, 0.7);
 }
 
 img {
@@ -142,7 +143,7 @@ img {
 }
 
 .main-header {
-  min-width: 1440px;
+  width: 100%;
   display: grid;
   background-color: var(--basic-back);
   outline: 3px solid rgba(0, 255, 0, 0.7);
@@ -647,28 +648,6 @@ a.more-btn {
 
 
 
-/*  Form modal  */
-
-.form-write-us label {
-  font-family: var(--title-family);
-  font-size: var(--nav-title-size);
-  line-height: var(--nav-title-line);
-  font-weight: var(--title-weight);
-}
-
-.form-write-us input,
-.form-write-us textarea {
-  font-size: 14px;
-  line-height: 19px;
-  font-weight: 400;
-  color: var(--basic-black);
-  opacity: 0.4;
-}
-
-
-
-
-
 /*  Page Catalog  */
 
 
@@ -732,10 +711,9 @@ a.crumbs {
   opacity: 0.1;
 }
 
-.catalog-page {
 
-}
 
+/*  Catalog  */
 
 .catalog-page h3 {
   font-family: var(--title-family);
@@ -1155,4 +1133,72 @@ p.footer-phone {
   clip: rect(0, 0, 0, 0);
   overflow: hidden;
   clip-path: inset(100%);
+}
+
+
+
+/*  Modal Form  */
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 960px;
+  height: 550px;
+  transform: translate(-50%, -50%);
+  background-color: var(--basic-white);
+  overflow: auto;
+  outline: 3px solid red;
+}
+
+.form-write-us {
+  position: relative;
+  padding-top: 92px;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-bottom: 69px;
+  outline: 3px solid green;
+}
+
+.write-us-wrap {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.form-write-us p {
+  margin: 0;
+}
+
+.form-write-us label {
+  font-family: var(--title-family);
+  font-size: var(--nav-title-size);
+  line-height: var(--nav-title-line);
+  font-weight: var(--title-weight);
+}
+
+.form-write-us input,
+.form-write-us textarea {
+  font-size: 14px;
+  line-height: 19px;
+  font-weight: 400;
+  color: var(--basic-black);
+  opacity: 0.4;
+}
+
+
+/*  Modal Map  */
+
+.modal-map {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 994px;
+  height: 593px;
+  transform: translate(-50%, -50%);
+  background-color: var(--basic-white);
+  overflow: auto;
+  outline: 3px solid blue;
+  opacity: 0.5;
 }
